Fixes to respiratory page.
Added cropped image to respiratory page. Added settings to adjust image to (any) device's screen (preventing from scrolling horizontally). Renamed image variables.

--- a/HLRproject/src/components/respiratoryarrest/respiratoryarrest.component.css
+++ b/HLRproject/src/components/respiratoryarrest/respiratoryarrest.component.css
@@ -2,3 +2,10 @@
   display: block;
   margin: 0 auto;
 }
+
+/*This image setting adjusts the image to any device screen so scrolls don't appear */
+img {
+  max-width: 100%;
+  height: auto;
+  width: auto;
+}
